fixed background image position on mobile

--- a/style-home.css
+++ b/style-home.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
+    width: 100%;
     font-family: Beatrice,sans-serif;
     color: white;
     background-color: black;
